[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/sleepy-cat-font/SleepyCatRegular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/PauseScene.gd" type="Script" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="PauseScene" type="Control"]
pause_mode = 2
light_mask = 7
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.258824, 0.352941, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 372.0
margin_top = 235.0
margin_right = 651.0
margin_bottom = 364.0
theme = SubResource( 3 )
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 279.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1

[node name="Instruction" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 61.0
margin_right = 448.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Press Alt to Continue"
align = 1

[node name="HelpButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 279.0
margin_bottom = 81.0
text = "How To Play"

[node name="UnpauseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 279.0
margin_bottom = 105.0
text = "Continue"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 109.0
margin_right = 279.0
margin_bottom = 129.0
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
